extract_all_objects(): Recursively extract objects
Fixes #3401

--- a/test cases/common/88 extract all/meson.build
+++ b/test cases/common/88 extract all/meson.build
@@ -2,8 +2,8 @@ project('extract all', 'c')
 
 a = static_library('a', 'one.c', 'two.c')
 b = static_library('b', 'three.c', 'four.c')
-c = static_library('c', 
-  objects : [a.extract_all_objects(), b.extract_all_objects()])
+c = static_library('c', objects : [a.extract_all_objects(), b.extract_all_objects()])
+d = static_library('d', objects : [c.extract_all_objects()])
 
-e = executable('proggie', 'prog.c', link_with : c)
+e = executable('proggie', 'prog.c', link_with : d)
 test('extall', e)
