Add 'get_generated_warn_args' (fix #3407)
Let target compiler (i.e. 'cc') decide how to filter warnings for
generated code.

For level 1, we use 'get_no_warn_args'.

Add 'warnlevel=2' in the failing build.

--- a/test cases/failing build/1 vala c werror/meson.build
+++ b/test cases/failing build/1 vala c werror/meson.build
@@ -1,4 +1,4 @@
-project('valatest', 'c', default_options : 'werror=true')
+project('valatest', 'c', default_options : ['warnlevel=2', 'werror=true'])
 
 if find_program('valac', required : false).found()
   add_languages('vala')
