Meson recognize .C files as C sources while it is C++
This PR adds .C as C++ extension and makes Meson case sensitive for
file extension detection.

Signed-off-by: Alexis Jeandet <alexis.jeandet@member.fsf.org>

--- a/test cases/common/2 cpp/meson.build
+++ b/test cases/common/2 cpp/meson.build
@@ -6,4 +6,7 @@ if meson.get_compiler('cpp').get_id() == 'intel'
 endif
 
 exe = executable('trivialprog', 'trivial.cc', extra_files : 'something.txt')
+exe2 = executable('trivialprog2', 'trivial2.C')
+
 test('runtest', exe)
+test('runtest', exe2)
