Fix two test cases

--- a/test cases/common/39 tryrun/meson.build
+++ b/test cases/common/39 tryrun/meson.build
@@ -13,8 +13,8 @@ endif
 
 ok_code = '''#include<stdio.h>
 int main(int argc, char **argv) {
-  printf("%s\\n", "stdout");
-  fprintf(stderr, "%s\\n", "stderr");
+  printf("%s\n", "stdout");
+  fprintf(stderr, "%s\n", "stderr");
   return 0;
 }
 '''
