Update CI image to bionic.

--- a/ciimage/Dockerfile
+++ b/ciimage/Dockerfile
@@ -1,19 +1,19 @@
-FROM ubuntu:artful
+FROM ubuntu:bionic
+
+ENV DEBIAN_FRONTEND noninteractive
 
 RUN apt-get -y update && apt-get -y upgrade \
-&& apt-get -y install git wget unzip \
+&& apt-get -y install wget unzip \
 && apt-get -y build-dep meson \
 && apt-get -y install qt5-default qtbase5-private-dev clang \
-&& apt-get -y install pkg-config-arm-linux-gnueabihf g++-7-arm-linux-gnueabihf \
+&& apt-get -y install pkg-config-arm-linux-gnueabihf \
 && apt-get -y install doxygen \
 && apt-get -y install python3-pip libxml2-dev libxslt1-dev cmake libyaml-dev \
-&& apt-get -y install libcups2-dev \
-&& apt-get -y install gcovr lcov \
-&& apt-get -y install fpga-icestorm arachne-pnr yosys \
-&& apt-get -y install gtk-sharp2 gtk-sharp2-gapi libglib2.0-cil-dev \
-&& apt-get -y install libwmf-dev \
-&& apt-get -y install qt4-linguist-tools qttools5-dev-tools \
+&& apt-get -y install qt4-linguist-tools \
 && apt-get -y install python-dev \
+&& apt-get -y install libomp-dev openssh-client \
 && python3 -m pip install hotdoc codecov
+
+# OpenSSH client is needed to run openmpi binaries.
 
 ENV LANG='C.UTF-8'
