dependencies: Allow config tool dependencies to use native files
This allows tools like llvm-config to be selected from the config file

Fixes: #3327

--- a/test cases/unit/46 native file binary/meson.build
+++ b/test cases/unit/46 native file binary/meson.build
@@ -6,4 +6,8 @@ if case == 'find_program'
   prog = find_program('bash')
   result = run_command(prog, ['--version'])
   assert(result.stdout().strip().endswith('12345'), 'Didn\'t load bash from config file')
+elif case == 'config_dep'
+  add_languages('cpp')
+  dep = dependency('llvm')
+  assert(dep.get_configtool_variable('version').endswith('12345'), 'Didn\'t load llvm from config file')
 endif
