--- a/test cases/frameworks/10 gtk-doc/doc/meson.build
+++ b/test cases/frameworks/10 gtk-doc/doc/meson.build
@@ -1,10 +1,11 @@
 cdata = configuration_data()
 cdata.set('VERSION', '1.0')
-configure_file(input : 'version.xml.in',
-  output : 'version.xml',
-  configuration : cdata)
+version_xml = configure_file(input : 'version.xml.in',
+                             output : 'version.xml',
+                             configuration : cdata)
 
 gnome.gtkdoc('foobar',
+  version_xml,
   src_dir : inc,
   main_sgml : 'foobar-docs.sgml',
   content_files : docbook,
