gdbus_codegen: Guess the output list for docbook generation
We were setting it to a file list that would always be wrong, and
always out of date since it would never exist.

However, the output list is not predictable. It usually has a 1-1
relationship with the input XML files, but it may not.

This must be fixed later with API for users to provide the output
names.

See: https://github.com/mesonbuild/meson/pull/3539

--- a/test cases/frameworks/10 gtk-doc/doc/meson.build
+++ b/test cases/frameworks/10 gtk-doc/doc/meson.build
@@ -5,8 +5,7 @@ version_xml = configure_file(input : 'version.xml.in',
                              configuration : cdata)
 
 gnome.gtkdoc('foobar',
-  version_xml,
   src_dir : inc,
   main_sgml : 'foobar-docs.sgml',
-  content_files : docbook,
+  content_files : [docbook, version_xml],
   install : true)
