--- a/test cases/unit/46 native file binary/meson_options.txt
+++ b/test cases/unit/46 native file binary/meson_options.txt
@@ -1,5 +1,5 @@
 option(
   'case',
   type : 'combo',
-  choices : ['find_program', 'config_dep']
+  choices : ['find_program', 'config_dep', 'python3']
 )
