Fix issues found by flake8

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,4 +20,8 @@ ignore =
     E402,
     # E731: do not assign a lambda expression, use a def (too many false positives)
     E731
+    # E741: ambiguous variable name 'l'
+    E741
+    # E722: do not use bare except'
+    E722
 max-line-length = 120
