Convert args.projectoptions into a dict
This simplifies a lot of code, and centralize "key=value" parsing in a
single place.

Unknown command line options becomes an hard error instead of
merely printing warning message. It has been warning it would become an
hard error for a while now. This has exceptions though, any
unknown option starting with "<lang>_" or "b_" are ignored because they
depend on which languages gets added and which compiler gets selected.
Also any option for unknown subproject are ignored because they depend
on which subproject actually gets built.

Also write more command line parsing tests. "19 bad command line
options" is removed because bad cmd line option became hard error and
it's covered with new tests in "30 command line".

--- a/test cases/unit/27 forcefallback/meson.build
+++ b/test cases/unit/27 forcefallback/meson.build
@@ -1,5 +1,5 @@
 project('mainproj', 'c',
-  default_options : ['wrap_mode=forcefallback'])
+  default_options : [])
 
 zlib_dep = dependency('zlib', fallback: ['notzlib', 'zlib_dep'])
 notfound_dep = dependency('cannotabletofind', fallback: ['definitelynotfound', 'some_var'], required : false)
