--- a/test cases/frameworks/7 gnome/mkenums/meson.build
+++ b/test cases/frameworks/7 gnome/mkenums/meson.build
@@ -127,3 +127,19 @@ enums5 = gnome.mkenums_simple('enums5', sources : 'meson-sample.h',
                               decorator : 'MESON_EXPORT',
                               header_prefix : '#include "meson-decls.h"')
 enumexe5 = executable('enumprog5', main, enums5, dependencies : gobj)
+
+# Generate template then use as input to mkenums
+
+# Simple trick to copy the file without substitutions, can be
+# removed when https://github.com/mesonbuild/meson/pull/3383 is fixed
+gen_h_template = configure_file(input: 'enums2.h.in',
+  output: 'enums2-tmp.h.in',
+  configuration: configuration_data(),
+  format: 'cmake')
+
+enums_h3 = gnome.mkenums('abc3',
+  sources : 'meson-sample.h',
+  h_template : gen_h_template,
+  ftail : '/* trailing header file info */',
+  install_header : true,
+  install_dir : get_option('includedir'))
