dict: address review comment I missed

--- a/test cases/common/199 dict/meson.build
+++ b/test cases/common/199 dict/meson.build
@@ -6,10 +6,15 @@ dict = {'foo' : 'bar',
 
 exe = executable('prog', sources : ['prog.c'])
 
+i = 0
+
 foreach key, value : dict
   test('dict test @0@'.format(key), exe,
     args : [dict[key], value])
+  i += 1
 endforeach
+
+assert(i == 3, 'There should be three elements in that dictionary')
 
 empty_dict = {}
 
