interpreter: add to_array method for bool values
This function enables a compact way to choose sources depending on configuration
options or on the build environment, like

    is_windows = host_machine.system() == 'windows'
    sources = [
        is_windows.to_array('util-win32.c'),
        (!is_windows).to_array('util-posix.c'),
        get_option('enable-foo').to_array('foo.c'),
        get_option('enable-bar').to_array('bar.c', 'bar-internal.c'),
        ...
    ]
    executable('prog', sources: sources)

--- a/test cases/common/63 array methods/meson.build
+++ b/test cases/common/63 array methods/meson.build
@@ -44,3 +44,31 @@ endif
 if not combined.contains('ghi')
   error('Combined claims not to contain ghi.')
 endif
+
+if true.to_array() != empty
+  error('Incorrect value for true.to_array')
+endif
+
+if true.to_array(two) != [two]
+  error('Incorrect value for true.to_array')
+endif
+
+if true.to_array('def', 'ghi') != two
+  error('Incorrect value for true.to_array')
+endif
+
+if true.to_array(two) != [two]
+  error('Incorrect value for true.to_array')
+endif
+
+if false.to_array() != empty
+  error('Incorrect value for true.to_array')
+endif
+
+if false.to_array('def', 'ghi') != empty
+  error('Incorrect value for false.to_array')
+endif
+
+if false.to_array(two) != empty
+  error('Incorrect value for false.to_array')
+endif
