run_tests: Run all cross tests together
There is a lot of overhead for each travis job, because docker pull
takes 3 minutes. Each cross test takes 3-4 minutes.

To make things worse, sometimes Dockerhub is slow and docker pull takes
longer than 3 minutes.

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,16 +33,10 @@ matrix:
   # Test cross builds separately, they do not use the global compiler
   - os: linux
     compiler: gcc
-    env: RUN_TESTS_ARGS="--cross=arm"
+    env: RUN_TESTS_ARGS="--cross"
   - os: linux
     compiler: gcc
-    env: RUN_TESTS_ARGS="--cross=arm" MESON_ARGS="--unity=on"
-  - os: linux
-    compiler: gcc
-    env: RUN_TESTS_ARGS="--cross=mingw"
-  - os: linux
-    compiler: gcc
-    env: RUN_TESTS_ARGS="--cross=mingw" MESON_ARGS="--unity=on"
+    env: RUN_TESTS_ARGS="--cross" MESON_ARGS="--unity=on"
 
 before_install:
   - python ./skip_ci.py --base-branch-env=TRAVIS_BRANCH --is-pull-env=TRAVIS_PULL_REQUEST
