get_define can concatenate string literals.
Added method concatenate_string_literals to CCompiler. Will concatenate
  string literals.
Added keyword argument 'concatenate_string_literals' to Compiler.get_define.
  If used will apply concatenate_string_literals to its return value.

--- a/test cases/common/140 get define/meson.build
+++ b/test cases/common/140 get define/meson.build
@@ -82,6 +82,6 @@ foreach lang : ['c', 'cpp']
   endif
 
   have = cc.get_define('TEST_VERSION_STR',
-        prefix : '#include <concat.h>', include_directories: include_directories('.'))
+        prefix : '#include <concat.h>', include_directories: include_directories('.'), concatenate_string_literals: true)
   assert(have == '"6.0.0"', 'TEST_VERSION_STR value is "@0@" instead of ""6.0.0""'.format(have))
 endforeach
