--- a/test cases/frameworks/7 gnome/gdbus/meson.build
+++ b/test cases/frameworks/7 gnome/gdbus/meson.build
@@ -6,6 +6,8 @@ gdbus_src = gnome.gdbus_codegen('generated-gdbus-no-docbook', 'com.example.Sampl
   ],
 )
 assert(gdbus_src.length() == 2, 'expected 2 targets')
+assert(gdbus_src[0].full_path().endswith('.c'), 'expected 1 c source file')
+assert(gdbus_src[1].full_path().endswith('.h'), 'expected 1 c header file')
 
 gdbus_src = gnome.gdbus_codegen('generated-gdbus',
   sources : 'com.example.Sample.xml',
@@ -19,6 +21,8 @@ gdbus_src = gnome.gdbus_codegen('generated-gdbus',
   install_dir : get_option('includedir')
 )
 assert(gdbus_src.length() == 3, 'expected 3 targets')
+assert(gdbus_src[0].full_path().endswith('.c'), 'expected 1 c source file')
+assert(gdbus_src[1].full_path().endswith('.h'), 'expected 1 c header file')
 
 if not pretend_glib_old and glib.version().version_compare('>=2.51.3')
   includes = []
