--- a/test cases/nim/1 basic/meson.build
+++ b/test cases/nim/1 basic/meson.build
@@ -1,3 +1,3 @@
-project('nim executable', 'nim')
+project('nim executable', ['nim'])
 e = executable('program', 'prog.nim', install: true)
 test('nimtest', e)
