Fix handling of dependency('', fallback: ['subproject', 'dep'])
Also extend a test case to cover this.

--- a/test cases/common/171 not-found dependency/meson.build
+++ b/test cases/common/171 not-found dependency/meson.build
@@ -9,3 +9,5 @@ assert(dep.type_name() == 'not-found', 'dependency should be of type "not-found"
 
 library('testlib', 'testlib.c', dependencies: [dep])
 subdir('sub', if_found: dep)
+
+subdep = dependency('', fallback: ['trivial', 'trivial_dep'])
