Add a test case for bad de-dup of -framework args
https://github.com/mesonbuild/meson/issues/3800

--- a/test cases/unit/33 external, internal library rpath/external library/meson.build
+++ b/test cases/unit/33 external, internal library rpath/external library/meson.build
@@ -5,5 +5,5 @@ l = shared_library('faa_pkg', 'faa.c', install: true)
 
 pkg = import('pkgconfig')
 pkg.generate(name: 'faa_pkg',
-             libraries: l,
+             libraries: [l, '-framework', 'CoreFoundation', '-framework', 'CoreMedia'],
              description: 'FAA, a pkg-config test library')
