setup.cfg: Don't warn about commented code

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,8 @@ ignore =
     E251,
     # E261: at least two spaces before inline comment
     E261,
+    # E265: block comment should start with '# '
+    E265,
     # E501: line too long
     E501,
     # E302: expected 2 blank lines, found 1
