test cases: Merge two configure_file tests
Unnecessary overhead having a separate test like that.

--- a/test cases/common/16 configure file/meson.build
+++ b/test cases/common/16 configure file/meson.build
@@ -184,3 +184,11 @@ configure_file(
   encoding : 'koi8-r',
   configuration : conf8
 )
+
+test_file = configure_file(
+  input: 'test.py.in',
+  output: 'test.py',
+  configuration: configuration_data()
+)
+
+test('configure-file', test_file)
