--- a/test cases/frameworks/10 gtk-doc/doc/meson.build
+++ b/test cases/frameworks/10 gtk-doc/doc/meson.build
@@ -9,3 +9,10 @@ gnome.gtkdoc('foobar',
   main_sgml : 'foobar-docs.sgml',
   content_files : [docbook, version_xml],
   install : true)
+
+gnome.gtkdoc('foobar2',
+  src_dir : inc,
+  main_sgml : 'foobar-docs.sgml',
+  content_files : [docbook, version_xml],
+  install : true,
+  install_dir : 'foobar2')
