Raise a MesonException when substituting an invalid value
Avoids throwing a traceback. Also, warn when setting such a value.

--- a/test cases/common/16 configure file/meson.build
+++ b/test cases/common/16 configure file/meson.build
@@ -211,3 +211,6 @@ test_file = configure_file(
 )
 
 test('configure-file', test_file)
+
+cdata = configuration_data()
+cdata.set('invalid_value', ['array'])
