Do not use 'in' as variable name in test cases

--- a/test cases/common/170 custom target template substitution/meson.build
+++ b/test cases/common/170 custom target template substitution/meson.build
@@ -4,12 +4,12 @@ check = find_program('checkcopy.py')
 
 config = configuration_data()
 
-in = configure_file(configuration : config, output : 'x@IN')
+config_file = configure_file(configuration : config, output : 'x@IN')
 
 # Check that substitution does not find @FOO@ and then misses @INPUT0@.
 # Check the resulting x@INPUT1@ is not replaced.
 foo = custom_target('runcheck',
-  input : [in, 'foo.c.in'],
+  input : [config_file, 'foo.c.in'],
   output : 'foo.c',
   command : [check, '-D@FOO@INPUT0@PUT1@', '@INPUT1@', '@OUTPUT@']
 )
