i18n: respect variable substitution for the target name when merging translations
Previously it wasn't possible to use twice @BASENAME@ as the targets would then be named @BASENAME@_merge

--- a/test cases/frameworks/6 gettext/data/meson.build
+++ b/test cases/frameworks/6 gettext/data/meson.build
@@ -1,6 +1,26 @@
+# Use filename substitution
 i18n.merge_file(
   input: 'test.desktop.in',
-  output: 'test.desktop',
+  output: '@BASENAME@',
+  type: 'desktop',
+  po_dir: '../po',
+  install: true,
+  install_dir: join_paths(get_option('datadir'), 'applications')
+)
+
+# Use filename substitution for another file
+i18n.merge_file(
+  input: 'test2.desktop.in',
+  output: '@BASENAME@',
+  type: 'desktop',
+  po_dir: '../po',
+  install: true,
+  install_dir: join_paths(get_option('datadir'), 'applications')
+)
+
+i18n.merge_file(
+  input: 'test.desktop.in',
+  output: 'test3.desktop',
   type: 'desktop',
   po_dir: '../po',
   install: true,
