ci: install gdc and ldc

--- a/ciimage/Dockerfile
+++ b/ciimage/Dockerfile
@@ -13,9 +13,13 @@ RUN apt-get -y update && apt-get -y upgrade \
 && apt-get -y install python-dev \
 && apt-get -y install libomp-dev openssh-client \
 && apt-get -y install -y clang libclang-dev llvm-dev flex \
+&& apt-get -y install gdc ldc \
 && python3 -m pip install hotdoc codecov \
 && dub fetch urld \
-&& dub build urld --compiler=gdc
+&& dub build urld --compiler=gdc \
+&& dub fetch dubtestproject \
+&& dub build dubtestproject:test1 --compiler=ldc2 \
+&& dub build dubtestproject:test2 --compiler=ldc2
 
 # OpenSSH client is needed to run openmpi binaries.
 
