Improve support for macOS dylib versioning
We now use the soversion to set compatibility_version and
current_version by default. This is the only sane thing we can do by
default because of the restrictions on the values that can be used for
compatibility and current version.

Users can override this value with the `darwin_versions:` kwarg, which
can be a single value or a two-element list of values. The first one
is the compatibility version and the second is the current version.

Fixes https://github.com/mesonbuild/meson/issues/3555
Fixes https://github.com/mesonbuild/meson/issues/1451

--- a/test cases/osx/2 library versions/meson.build
+++ b/test cases/osx/2 library versions/meson.build
@@ -8,7 +8,7 @@ some = shared_library('some', 'lib.c',
   build_rpath : zlib_dep.get_pkgconfig_variable('libdir'),
   dependencies : zlib_dep,
   version : '1.2.3',
-  soversion : '0',
+  soversion : '7',
   install : true)
 
 noversion = shared_library('noversion', 'lib.c',
@@ -22,6 +22,21 @@ onlysoversion = shared_library('onlysoversion', 'lib.c',
   # Also test that int soversion is acceptable
   soversion : 5,
   install : true)
+
+shared_library('intver', 'lib.c',
+  darwin_versions : 2)
+
+shared_library('stringver', 'lib.c',
+  darwin_versions : '2.3')
+
+shared_library('stringlistver', 'lib.c',
+  darwin_versions : ['2.4'])
+
+shared_library('intstringver', 'lib.c',
+  darwin_versions : [1111, '2.5'])
+
+shared_library('stringlistvers', 'lib.c',
+  darwin_versions : ['2.6', '2.6.1'])
 
 # Hack to make the executables below depend on the shared libraries above
 # without actually adding them as `link_with` dependencies since we want to try
