Deduplicate build-tree RPATHs on macOS
* Currently, RPATHs coming from dependencies and
  `build_rpath` provided by the user might contain
  the same path. Apple's `install_name` tool is
  allergic to providing the same argument twice
  when removing RPATHs:

    error: install_name_tool: "-delete_rpath /usr/lib" specified more than once

--- a/test cases/osx/2 library versions/meson.build
+++ b/test cases/osx/2 library versions/meson.build
@@ -1,6 +1,12 @@
 project('library versions', 'c')
 
+zlib_dep = dependency('zlib')
+
 some = shared_library('some', 'lib.c',
+  # duplicate the rpath again, in order
+  # to test Meson's RPATH deduplication
+  build_rpath : zlib_dep.get_pkgconfig_variable('libdir'),
+  dependencies : zlib_dep,
   version : '1.2.3',
   soversion : '0',
   install : true)
