Add a test case for U+000C as whitespace in a Meson build file.

--- a/test cases/common/1 trivial/meson.build
+++ b/test cases/common/1 trivial/meson.build
@@ -18,4 +18,6 @@ endif
 
 exe = executable('trivialprog', sources : sources)
 
+# U+000C FORM FEED whitespace.
+
 test('runtest', exe) # This is a comment
