find_installation: Add support for feature option in required kwarg
Closes: #4165.

--- a/test cases/unit/39 python extmodule/meson.build
+++ b/test cases/unit/39 python extmodule/meson.build
@@ -21,3 +21,6 @@ if py.found()
 else
   error('MESON_SKIP_TEST: Python not found, skipping test.')
 endif
+
+py = py_mod.find_installation(get_option('python'), required : get_option('disabled_opt'))
+assert(not py.found(), 'find_installation not working with disabled feature')
