modules/python: Allow use of the native file
Currently this just allows setting a "python" variable that always
overrides, probably we want to have the option for "python2" and
"python3" as well.

--- a/test cases/unit/46 native file binary/meson_options.txt
+++ b/test cases/unit/46 native file binary/meson_options.txt
@@ -1,5 +1,5 @@
 option(
   'case',
   type : 'combo',
-  choices : ['find_program', 'config_dep', 'python3']
+  choices : ['find_program', 'config_dep', 'python3', 'python']
 )
