Detect clang-cl as msvc-like, not clang-like
Handle clang's cl or clang-cl being in PATH, or set in CC/CXX

Future work: checking the name of the executable here seems like a bad idea.
These compilers will fail to be detected if they are renamed.

v2:
Update compiler.get_argument_type() test
Fix comparisons of id inside CCompiler, backends and elsewhere

v3:
ClangClCPPCompiler should be a subclass of ClangClCCompier, as well

Future work: mocking in test_find_library_patterns() is effected, as we
now test for a subclass, rather than self.id in CCompiler.get_library_naming()

--- a/test cases/common/206 argument syntax/meson.build
+++ b/test cases/common/206 argument syntax/meson.build
@@ -7,7 +7,7 @@ cc = meson.get_compiler('c')
 
 if ['gcc', 'lcc', 'clang'].contains(cc.get_id())
   expected = 'gcc'
-elif cc.get_id() == 'msvc'
+elif ['msvc', 'clang-cl'].contains(cc.get_id())
   expected = 'msvc'
 elif cc.get_id() == 'intel'
   if host_machine.system() == 'windows'
