--- a/ciimage/Dockerfile
+++ b/ciimage/Dockerfile
@@ -12,7 +12,8 @@ RUN apt-get -y update && apt-get -y upgrade \
 && apt-get -y install qt4-linguist-tools \
 && apt-get -y install python-dev \
 && apt-get -y install libomp-dev openssh-client \
-&& apt-get -y install -y clang libclang-dev llvm-dev flex \
+&& apt-get -y install clang libclang-dev llvm-dev flex \
+&& apt-get -y install libgcrypt11-dev \
 && apt-get -y install gdc ldc \
 && python3 -m pip install hotdoc codecov \
 && dub fetch urld \
