--- a/test cases/common/13 pch/meson.build
+++ b/test cases/common/13 pch/meson.build
@@ -2,4 +2,9 @@ project('pch test', 'c', 'cpp')
 
 subdir('c')
 subdir('cpp')
-subdir('mixed')
+
+if meson.backend() == 'xcode'
+  warning('Xcode backend only supports one precompiled header per target. Skipping "mixed" which has various precompiled headers.')
+else
+  subdir('mixed')
+endif
