dependency: Allow passing patterns to 'static' kwarg
Passing 'static:true' to dependency() will try to static link the
dependency, but also dependencies of the dependency, etc. This could
lead to even static link libc and other basic system libraries, or warn
if those static libraries cannot be found on the system.

To give more flexibility, 'static' kwarg now accepts a list of patterns,
the static library is used only if its path match one of the patterns,
otherwise it will be kept dynamic.

Closes #2765.

--- a/test cases/unit/18 pkgconfig static/meson.build
+++ b/test cases/unit/18 pkgconfig static/meson.build
@@ -1,37 +1,27 @@
 project('pkg-config static', 'c')
 
-if build_machine.system() != 'windows'
-  prefix = meson.source_root()
-else
-  # pkg-config files should not use paths with \
-  prefix_parts = meson.source_root().split('\\')
-  # If the path is C:/foo/bar, convert it to /c/foo/bar so we can test if our
-  # automatic conversion to C:/foo/bar inside PkgConfigDependency is working.
-  if prefix_parts[0][1] == ':'
-    drive = prefix_parts[0][0]
-  else
-    drive = prefix_parts[0]
-  endif
-  new_parts = []
-  foreach part : prefix_parts
-    if part != prefix_parts[0]
-      new_parts += part
-    endif
-  endforeach
-  prefix = '/@0@/@1@'.format(drive, '/'.join(new_parts))
-endif
-message(prefix)
-
-# Escape spaces
-prefix_parts = prefix.split(' ')
-prefix = '\ '.join(prefix_parts)
-
-conf = configuration_data()
-conf.set('PREFIX', prefix)
-configure_file(input : 'foo.pc.in',
-               output : 'foo.pc',
-               configuration : conf)
-
+# Should static link both libfoo and libbar, print warning because static
+# libshared cannot be found
 foo_dep = dependency('foo', static : true)
+test('footest', executable('foomain', 'main.c', dependencies : foo_dep),
+  args : ['foo', 'bar'])
 
-test('footest', executable('foomain', 'main.c', dependencies : foo_dep))
+# Should static link both libfoo and libbar, not printing warnings
+foo_dep = dependency('foo', static : ['*libbar*', '*/libfoo.a'])
+exe = executable('foomain-pattern1', 'main.c', dependencies : foo_dep)
+test('footest-pattern1', exe, args : ['foo', 'bar'])
+
+# Should static link only libfoo
+foo_dep = dependency('foo', static : '*/libfoo.a')
+exe = executable('foomain-pattern2', 'main.c', dependencies : foo_dep)
+test('footest-pattern2', exe, args : ['foo'])
+
+# Shouldn't static link anything
+foo_dep = dependency('foo', static : '')
+exe = executable('foomain-pattern3', 'main.c', dependencies : foo_dep)
+test('footest-pattern3', exe, args : [])
+
+# Shouldn't static link anything
+foo_dep = dependency('foo', static : [])
+exe = executable('foomain-pattern4', 'main.c', dependencies : foo_dep)
+test('footest-pattern4', exe, args : [])
