Make custom dist scripts accept arguments.
meson.add_dist_script, introduced in #3906, did not accept any arguments
other than script name. Since all other meson.add_*_script methods
do accept args, this makes the dist script accept them as well.

--- a/test cases/unit/35 dist script/meson.build
+++ b/test cases/unit/35 dist script/meson.build
@@ -4,4 +4,4 @@ project('dist script', 'c',
 exe = executable('comparer', 'prog.c')
 test('compare', exe)
 
-meson.add_dist_script('replacer.py')
+meson.add_dist_script('replacer.py', '"incorrect"', '"correct"')
