Use 'CI' environment variable to detect CI environment
Use the 'CI' environment variable to detect CI environment, rather than a
collection of CI-specific ones.

--- a/test cases/frameworks/17 mpi/meson.build
+++ b/test cases/frameworks/17 mpi/meson.build
@@ -17,7 +17,7 @@ exec = executable('exec',
 test('MPI C', exec)
 
 if build_machine.system() != 'windows'
-  # C++ MPI not supported by MS-MPI used on AppVeyor.
+  # C++ MPI not supported by MS-MPI
   mpicpp = dependency('mpi', language : 'cpp')
   execpp = executable('execpp',
     'main.cpp',
