azure: Enable vs2015 jobs
Don't run MPI runtime installer, which fails with vs2015 image

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,24 +10,24 @@ variables:
   CI: 1
 
 jobs:
-#- job: vs2015
-#  pool:
-#    vmImage: vs2015-win2012r2
-#
-#  strategy:
-#    maxParallel: 10
-#    matrix:
-#        vc2015x86ninja:
-#          arch: x86
-#          compiler: msvc2015
-#          backend: ninja
-#        vc2015x86vs:
-#          arch: x86
-#          compiler: msvc2015
-#          backend: vs2015
-#
-#  steps:
-#  - template: ci/azure-steps.yml
+- job: vs2015
+  pool:
+    vmImage: vs2015-win2012r2
+
+  strategy:
+    maxParallel: 10
+    matrix:
+        vc2015x86ninja:
+          arch: x86
+          compiler: msvc2015
+          backend: ninja
+        vc2015x86vs:
+          arch: x86
+          compiler: msvc2015
+          backend: vs2015
+
+  steps:
+  - template: ci/azure-steps.yml
 
 - job: vs2017
   pool:
