Set env vars so MS-MPI tests are run
Import MS-MPI env vars set by installer in registry to environment

Skip testing we can apply a version constraint to MPI when version isn't
known (as is the case for MS-MPI)

(These tests have never worked in appveyor)

--- a/ci/azure-steps.yml
+++ b/ci/azure-steps.yml
@@ -39,6 +39,12 @@ steps:
      Start-Process msiexec.exe -ArgumentList '/i msmpisdk.msi /quiet' -Wait
      Start-Process .\MSMpiSetup.exe -ArgumentList '-unattend -full' -Wait
 
+     # import ms-mpi env vars (set by installer)
+     foreach ($p in "MSMPI_INC", "MSMPI_LIB32", "MSMPI_LIB64") {
+       $v = [Environment]::GetEnvironmentVariable($p, "Machine")
+       Set-Content "env:$p" "$v"
+     }
+
      # add downloads to PATH
      $env:Path = "$env:SYSTEM_WORKFOLDER;$env:Path"
 
