azure: Add clang-cl/ninja to matrix
Note that Vs2017 tools are also in PATH for llvm build

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,6 +44,10 @@ jobs:
           arch: x64
           compiler: msvc2017
           backend: vs2017
+        clangclx64ninja:
+          arch: x64
+          compiler: clang-cl
+          backend: ninja
 
   steps:
   - template: ci/azure-steps.yml
