wrap: Fix crash with file based wraps
Add unit test to avoid regressions in the future.

--- a/test cases/common/158 wrap file should not failed/meson.build
+++ b/test cases/common/158 wrap file should not failed/meson.build
@@ -3,6 +3,7 @@ project('mainproj', 'c',
 )
 
 subproject('zlib')
+subproject('foo')
 
 executable('grabprog', files('src/subprojects/prog.c'))
 executable('grabprog2', files('src/subprojects/foo/prog2.c'))
