--- a/test cases/common/13 pch/mixed/meson.build
+++ b/test cases/common/13 pch/mixed/meson.build
@@ -5,8 +5,9 @@ exe = executable(
   cpp_pch : ['pch/main_pch.cc', 'pch/main.h'],
 )
 
+# test pch when only a header is given (not supported by msvc)
 cc = meson.get_compiler('c')
-if cc.get_id() != 'msvc'
+if not ['msvc', 'clang-cl'].contains(cc.get_id())
   exe2 = executable(
     'prog2',
     files('main.cc', 'func.c'),
